test_next-20160223/20160223094533/sparse/defconfig/sparse_20160223094533_log.txt
test_sparse: Tue Feb 23 09:49:07 PST 2016: started on defconfig test_next-20160223 (538fe56e2a6658270b2094c3f9f2439cf1887425)
test_sparse: Tue Feb 23 09:49:07 PST 2016: serial is 20160223094533
test_sparse: sparse version unknown (checksum d41d8cd98f00b204e9800998ecf8427e)
In file included from include/linux/kvm_host.h:35:0,
                 from arch/arm64/kernel/asm-offsets.c:24:
./arch/arm64/include/asm/kvm_host.h: In function ‘__cpu_init_stage2’:
./arch/arm64/include/asm/kvm_host.h:338:2: error: implicit declaration of function ‘kvm_call_hyp’ [-Werror=implicit-function-declaration]
  kvm_call_hyp(__init_stage2_translation);
  ^
cc1: some warnings being treated as errors
make[1]: *** [arch/arm64/kernel/asm-offsets.s] Error 1
make: *** [prepare0] Error 2
make: *** Waiting for unfinished jobs....
test_sparse: Tue Feb 23 09:49:26 PST 2016: FAILED on defconfig test_next-20160223
test_sparse: Tue Feb 23 09:49:26 PST 2016: ended on defconfig test_next-20160223
